--- a/CRM/MainWindow.xaml
+++ b/CRM/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="CRM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Company name CRM system" Height="170.267" Width="313.62" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Company name CRM system" Height="170.267" Width="313.62" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        PreviewKeyDown="Window_PreviewKeyDown">
     <Grid>
         <TextBox x:Name="tbUserName" HorizontalAlignment="Left" Height="23" Margin="106,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" TabIndex="1"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top"/>
